Updated cluster documentation