@@ -238,101 +238,71 @@ Integrating onto a page
 Cluster setup
 -------------
 
-If you want to use a cluster of Karaf instances instead of a single instance, you can use Karaf's instance administration
-to generate the nodes quickly on the same machine. Here are the steps to do this : 
+Context server relies on Elasticsearch to discover and configure its cluster. You just need to install multiple context
+servers on the same network, and enable the discovery protocol in etc/org.oasis_open.contextserver.persistence.elasticsearch.cfg file :
 
-1. With all Karaf instances shut down, in KARAF_HOME/bin launch the ./instance list script, you should get something like this : 
+    discovery.zen.ping.multicast.enabled=true
 
-    ```
-    ./instance list
-    SSH Port | RMI Registry | RMI Server | State   | PID  | Name 
-    -------------------------------------------------------------
-        8101 |         1099 |      44444 | Stopped | 0    | root 
-    ```
+All nodes on the same network, sharing the same cluster name will be part of the same cluster.
 
-2. Create a new instance with the following command:
+###Recommended configurations
 
-    ```
-    ./instance create node2
-    ```
-    
-3. You should change the default Java options of the instance, you can do so with a command like this one : 
-    
-    ```
-    ./instance opts-change root "-server -Xmx3G -XX:MaxPermSize=384M -Dcom.sun.management.jmxremote -XX:+UnlockDiagnosticVMOptions -XX:+UnsyncloadClass"
-    ```        
-    It is recommmended to do this even for the root node, otherwise if you use the instance command to start it it will
-    use default values that are too small.
-   
-4. You can then start the node by using the command :  
- 
-    ```
-    ./instance start node2
-    ```
+It is recommended to have one node dedicated to the context server, where the other nodes take care of the
+Elasticsearch persistence. The node dedicated to the context server will have node.data set to false.
 
-5. Use "instance list" to get the SSH port of the new node : 
+#### 2 nodes  configuration
+One node dedicated to context server, 1 node for elasticsearch storage.
 
-    ```
-    SSH Port | RMI Registry | RMI Server | State   | PID  | Name 
-    -------------------------------------------------------------
-        8101 |         1099 |      44444 | Started | 3853 | root 
-        8103 |         1101 |      44446 | Started | 4180 | node2
-    ```
+Node A :
 
-6. You can then connect to it using : 
+    node.data=true
+    numberOfReplicas=0
+    monthlyIndex.numberOfReplicas=0
 
-    ```
-    ssh karaf@localhost -p 8103 
-    ```
+Node B :
 
-    The default password is "karaf". BE SURE TO CHANGE THIS WHEN YOU GO TO PRODUCTION !
-   
-7. You can then install all the required features by using the following commands : 
+    node.data=false
+    numberOfReplicas=0
+    monthlyIndex.numberOfReplicas=0
 
-    ```
-       feature:install -v war
-       feature:repo-add cxf 2.7.11
-       feature:install -v cxf/2.7.11
-       feature:install -v openwebbeans
-       feature:install -v pax-cdi-web-openwebbeans
-    ```
-       
-8. You can then disconnect from the node by using:
+#### 3 nodes configuration
+One node dedicated to context server, 2 nodes for elasticsearch storage with fault-tolerance
 
-    ```
-    logout
-    ```
-    
-    and shutdown the node instance because we will need to perform a configuration change for the HTTP port if you 
-    are running the instances on the same machine. To shut it down use : 
-   
-    ```
-    ./instance stop node2
-    ```
+Node A :
 
-9. You should then change the default HTTP port by changing the value in the KARAF_HOME/instances/node2/etc/jetty.xml 
-file from 8181 to something else. In this example we have changed to port to 8182 : 
- 
-    ```
-     <Call name="addConnector">
-         <Arg>
-             <New class="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                 <Set name="host">
-                     <Property name="jetty.host" />
-                 </Set>
-                 <Set name="port">
-                     <Property name="jetty.port" default="8182" />
-                 </Set>
-    ```
- 
-10. You can then start your instance by using the following command : 
+    node.data=false
+    numberOfReplicas=1
+    monthlyIndex.numberOfReplicas=1
 
-    ```
-    ./instance start node2
-    ```
-    
-11. You can then finally copy the Context Server KAR into the KARAF_HOME/instances/node2/deploy directory and 
-everything should be up and running.
+Node B :
+
+    node.data=true
+    numberOfReplicas=1
+    monthlyIndex.numberOfReplicas=1
+
+Node C :
+
+    node.data=true
+    numberOfReplicas=1
+    monthlyIndex.numberOfReplicas=1
+
+### Specific configuration
+If multicast is not allowed on your network, you'll need to switch to unicast protocol and manually configure the server IPs. This can be
+done by disabling the elasticsearch automatic discovery in etc/org.oasis_open.contextserver.persistence.elasticsearch.cfg :
+
+    discovery.zen.ping.multicast.enabled=false
+
+
+And then set the property discovery.zen.ping.unicast.hosts in etc/elasticsearch.yml files :
+
+
+    discovery.zen.ping.unicast.hosts: [‘192.168.0.1:9300', ‘192.168.0.2:9300']
+
+
+More information and configuration options can be found at :
+[https://www.elastic.co/guide/en/elasticsearch/reference/current/modules-discovery.html](https://www.elastic.co/guide/en/elasticsearch/reference/current/modules-discovery.html)
+
+
 
 JDK Selection on Mac OS X
 -------------------------
